mysql platform added, base image changed

--- a/bridge/service/Dockerfile
+++ b/bridge/service/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:16-alpine3.13
+FROM bellsoft/liberica-openjdk-alpine-musl:16
 COPY ./bridge-service-0.0.1-SNAPSHOT.jar  app.jar
 RUN apk --no-cache add curl
 
