--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,6 +49,7 @@ services:
 
   space-db-service:
     image: mysql
+    platform: linux/x86_64
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
